--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "password-typo-case",
   "version": "1.0.0",
-  "description": "TODO: add desc",
-  "keywords": [],
+  "description": "Expand the given password into a list of possible switched-case password",
+  "keywords": [
+    "password",
+    "typo",
+    "case switch"
+  ],
   "author": {
     "name": "Beeno Tung",
     "email": "aabbcc1241@yahoo.com.hk",
@@ -66,5 +70,13 @@
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tslib/password-typo-case.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tslib/password-typo-case/issues"
+  },
+  "homepage": "https://github.com/tslib/password-typo-case#readme"
 }
